# whisper-terraform-aws-Fargate

./: My Journey to Whisper Deployment.md  README.md
whisper-app/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
whisper-tf/: README.md  main.tf
whisper-tf/boostrap/: main.tf  outputs.tf  variables.tf
whisper-tf/boostrap/modules/code_build/: buildspec.yml.tpl  main.tf  outputs.tf  variables.tf
whisper-tf/boostrap/modules/code_commit/: main.tf  outputs.tf
whisper-tf/boostrap/modules/ecr/: main.tf  outputs.tf  variables.tf
whisper-tf/boostrap/modules/iam/: main.tf
whisper-tf/boostrap/modules/vpc/: main.tf  output.tf  variables.tf
whisper-tf/deployment/: main.tf  outputs.tf  variables.tf
whisper-tf/deployment/modules/ecs/: alb.tf  ecs_iam.tf  efs.tf  main.tf  outputs.tf  variables.tf  vpc.tf
